# PolyMind

./: .gitignore  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/app/: agent.yaml  default.yaml  local.yaml
configs/providers/: aws.yaml  azure.yaml  google.yaml  openai.yaml
configs/training/: default.yaml
docs/: blocks.md  training.md
infra/terraform/aws/: README.md
infra/terraform/azure/: README.md
infra/terraform/gcp/: README.md
multimod/core/abi/: __init__.py  mm_abi.md
polymind/: __init__.py  agents.pth  runtime.pth
scripts/: smoke_torch.py
src/: __init__.py
src/agents/base/: agent_base.py  provider_registry.py
src/agents/google/: client.py
src/multimod/core/abi/: __init__.py
src/polymind/: __init__.py
src/polymind/agents/: __init__.py
src/polymind/agents/aws/: __init__.py  client.py
src/polymind/agents/azure/: __init__.py  client.py
src/polymind/agents/base/: __init__.py  provider_registry.py
src/polymind/agents/google/: __init__.py
src/polymind/agents/local/: __init__.py  client.py
src/polymind/agents/openai/: __init__.py  client.py
src/polymind/blocks/: __init__.py  transformer_v1.py
src/polymind/core/: __init__.py  model.py  registry.py
src/polymind/core/abi/: __init__.py  mm_abi.md
src/polymind/runtime/: __init__.py
src/polymind/storage/: __init__.py  azure_blob.py  gcs.py  local_fs.py  s3.py
src/polymind/trainers/: __init__.py  orchestrator.py
src/runtime/cli/: chat.py
src/storage/: base.py
tests/: __init__.py
tests/abi/: __init__.py  test_schema_compat.py
(+12 files in other folders)
