[project]
name = "polymind"
version = "1.1.0"
description = "PolyMind: modular multi-modal LLM stack with pluginable blocks"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [ ]


[[project.authors]]
name = "nayvidtechnology"


[tool.uv]
package = true
dev-dependencies = [ ]


[build-system]
requires = [ "setuptools>=68", "wheel" ]
build-backend = "setuptools.build_meta"
